[gd_scene load_steps=8 format=3 uid="uid://pf2v80sf35se"]

[ext_resource type="Script" uid="uid://daolf2bu0lnvj" path="res://scenes/猫猫王国菜单/猫猫王国菜单.gd" id="1_kgv0v"]
[ext_resource type="Texture2D" uid="uid://ktpivwnwnpha" path="res://scenes/过场动画/素材/ppt1.png" id="2_pxxe8"]
[ext_resource type="Texture2D" uid="uid://c561ug31q5r5s" path="res://scenes/过场动画/素材/ppt2.png" id="3_swpwb"]
[ext_resource type="Texture2D" uid="uid://yftledn161ot" path="res://scenes/过场动画/素材/ppt3.png" id="4_kg2jb"]
[ext_resource type="Texture2D" uid="uid://b4t2inijq8sl0" path="res://scenes/猫猫王国菜单/素材/猫猫王国.png" id="5_kg2jb"]
[ext_resource type="FontFile" uid="uid://br1t1kqdhnsti" path="res://assets/font/BoutiqueBitmap9x9_1.92.ttf" id="5_swpwb"]

[sub_resource type="LabelSettings" id="LabelSettings_kg2jb"]
font = ExtResource("5_swpwb")
font_size = 20

[node name="猫猫王国菜单" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kgv0v")

[node name="菜单背景" type="Sprite2D" parent="."]
position = Vector2(640, 359)
texture = ExtResource("5_kg2jb")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.72300005
anchor_right = 0.5
anchor_bottom = 0.72300005
offset_left = -147.00003
offset_top = -136.56009
offset_right = -60.544678
offset_bottom = -34.159454
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3.47, 2.666)

[node name="开始游戏" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "开始游戏"

[node name="继续游戏" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "继续游戏"

[node name="退出游戏" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "退出游戏"

[node name="ppt1" type="Sprite2D" parent="."]
visible = false
position = Vector2(639.9999, 359.99994)
scale = Vector2(0.6666665, 0.6666665)
texture = ExtResource("2_pxxe8")

[node name="ppt2" type="Sprite2D" parent="."]
visible = false
position = Vector2(640, 359.99997)
scale = Vector2(0.6666667, 0.6666667)
texture = ExtResource("3_swpwb")

[node name="ppt3" type="Sprite2D" parent="."]
visible = false
position = Vector2(640, 359.99997)
scale = Vector2(0.66666675, 0.6666667)
texture = ExtResource("4_kg2jb")

[node name="Black" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="."]
visible = false
top_level = true
layout_mode = 0
offset_left = 1056.0
offset_top = 625.0
offset_right = 1156.0
offset_bottom = 648.0
text = "单击以继续"
label_settings = SubResource("LabelSettings_kg2jb")

[connection signal="pressed" from="VBoxContainer/开始游戏" to="." method="_on_开始游戏_pressed"]
[connection signal="pressed" from="VBoxContainer/继续游戏" to="." method="_on_继续游戏_pressed"]
[connection signal="pressed" from="VBoxContainer/退出游戏" to="." method="_on_退出游戏_pressed"]
